Fix letter-spacing of <mtext />.

--- a/Css/Keynote.css
+++ b/Css/Keynote.css
@@ -589,6 +589,10 @@ mi, mtext, mn {
     font-family: Math;
 }
 
+mtext {
+    letter-spacing: -.1em;
+}
+
 svg {
     display: block;
     font-size: .7em;
